2008-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dired.el (dired-read-dir-and-switches): Use read-directory-name even
	for non-dialogs.

	* Makefile.in (bootstrap-prepare): Don't copy ldefs-boot over loaddefs.
	* loadup.el: Load ldefs-boot.el if loaddefs.el doesn't exist.

2008-04-11  Jan Djärv  <jan.h.d@swipnet.se>

	* tooltip.el (tooltip-show-help-non-mode): Set message-truncate-lines
	to t and don't truncate msg.

2008-04-11  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (diary, holidays):
	Move custom groups to other files.
	(holiday-general-holidays, holiday-oriental-holidays)
	(holiday-local-holidays, holiday-other-holidays, hebrew-holidays-1)
	(hebrew-holidays-2, hebrew-holidays-3, hebrew-holidays-4)
	(holiday-hebrew-holidays, holiday-christian-holidays)
	(holiday-islamic-holidays, holiday-bahai-holidays)
	(holiday-solar-holidays, calendar-holidays): Move to holidays.el.
	* calendar/diary-lib.el: Move custom group here from calendar.el.
	* calendar/holidays-lib.el: Move custom group and variables here
	from calendar.el.

	* calendar/cal-china.el (calendar-chinese-time-zone): Mark as risky.

	* calendar/cal-dst.el (calendar-dst-check-each-year-flag):
	Fix custom group.
	(calendar-current-time-zone-cache): Autoload riskiness.

	* calendar/cal-tex.el (cal-tex-preamble-extra): Fix custom type.

2008-04-11  Chong Yidong  <cyd@stupidchicken.com>

	* woman.el (woman2-TH): Use string-equal instead of string-match.

2008-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el (smerge-apply-resolution-patch): Fix typo.
	(smerge-resolve): Merge the "2-way refinement" case with one half of
	the "mere whitespace" resolution.

2008-04-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-after-dir-status): Detect the conflict state.

2008-04-10  Juanma Barranquero  <lekktu@gmail.com>

	* subr.el (assoc-ignore-case, assoc-ignore-representation):
	Add WHEN to obsolescence declaration.
